fix stretched auction image

--- a/apps/auction/stylesheets/preview.styl
+++ b/apps/auction/stylesheets/preview.styl
@@ -1,6 +1,8 @@
 .auction-preview-cover-image
   // 3:1 ratio
   padding-bottom 33.33%
+  background-size cover
+  background-position center center
 
 .auction-preview-header-primary
 
